Cache media attachments query result in EntryRevision.